--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Bret Bowerman</title>
+        <link rel="icon" type="image/x-icon" href="/media/favicon.ico">
         <meta name="description" content="dj • house • techno">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
@@ -15,10 +16,10 @@
     <body>
         <header class="header">
             <nav class="navbar">
-                <a class="nav-logo" href="index.html">bret bowerman</a>
+                <a href="www.bretbowerman.com" class="nav-logo" aria-label="home">bret bowerman</a>
                 <ul class="nav-menu">
                     <!-- <li class="nav-item"><a href="about.html">about</a></li> -->
-                    <li class="nav-item"><a href="https://instagram.com/bretbowerman" target="_blank"<i class="fa-brands fa-instagram fa-lg"></i></a></li>
+                    <li class="nav-item"><a href="https://instagram.com/bretbowerman" target="_blank" aria-label="instagram"<i class="fa-brands fa-instagram fa-lg"></i></a></li>
                  </ul>
                  <!-- <div class="hamburger">
                     <span class="bar"></span>
@@ -30,7 +31,7 @@
         <main>
         <section>
             <div class="hero_section">
-                <iframe width="100%" height="500" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/658917885&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 12px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/bretbowerman" title="Bret Bowerman" target="_blank" style="color: #cccccc; text-decoration: none;"></div>
+                <iframe title="soundcloud playlist" width="100%" height="500" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/658917885&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 12px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/bretbowerman" title="Bret Bowerman" target="_blank" style="color: #cccccc; text-decoration: none;"></div>
         </div>
         </section>
     </main>
