--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <header class="header">
             <nav class="navbar">
-                <a href="/index.html" class="nav-logo" aria-label="home">bret bowerman</a>
+                <p>bret bowerman</p>
                 <ul class="nav-menu">
                     <!-- <li class="nav-item"><a href="about.html">about</a></li> -->
                     <li class="nav-item"><a href="https://instagram.com/bretbowerman" target="_blank" aria-label="instagram"<i class="fa-brands fa-instagram fa-lg"></i></a></li>
