--- a/index.html
+++ b/index.html
@@ -1,51 +1,48 @@
 <!DOCTYPE html>
+
 <html lang="en">
-    <head>
-        <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8LSVJN1W8R"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-8LSVJN1W8R');
-</script>
-        <meta charset="utf-8">
-        <title>Bret Bowerman</title>
-        <link rel="icon" type="image/x-icon" href="/media/favicon.ico">
-        <meta name="description" content="dj • house • techno">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/da3cfdee88.js" crossorigin="anonymous"></script>
-        <!-- <script defer src="script.js"></script> -->
-    </head>
-    <body>
-        <header class="header">
-            <nav class="navbar">
-                <p>bret bowerman</p>
-                <ul class="nav-menu">
-                    <!-- <li class="nav-item"><a href="about.html">about</a></li> -->
-                    <li class="nav-item"><a href="https://instagram.com/bretbowerman" target="_blank" aria-label="instagram"<i class="fa-brands fa-instagram fa-lg"></i></a></li>
-                 </ul>
-                 <!-- <div class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                 </div> -->
-            </nav>
-        </header>
-        <main>
-        <section>
-            <div class="hero_section">
-                <iframe title="soundcloud playlist" width="100%" max-width:"60vw" height="500" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/658917885&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 12px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/bretbowerman" title="Bret Bowerman" target="_blank" style="color: #cccccc; text-decoration: none;"></div>
-        </div>
-        </section>
-    </main>
-    <!-- <footer>
+<head>
 
-        </footer> -->
-    </body>
+	<meta charset="utf-8">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>bret bowerman | dj</title>
+
+	<meta name="description" content="dj • house • techno">
+
+	<meta property="og:image" content="media/meta.png">
+
+	<link rel="stylesheet" href="css/style.css">
+
+	<link rel="icon" type="image/x-icon" href="media/favicon.png">
+
+</head>
+
+<body>
+
+	<main>
+
+		<div>
+
+		  <video src="media/newsletter-1.mp4" autoplay loop playsinline muted>
+		  </video>
+
+		</div>
+
+		<div>
+
+			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfkv1QXxCCr9ViabdGiGWzteSGu_KnKdE0C2e1VI3Q1ewjO8g/viewform?embedded=true" width="640" height="640" marginheight="0" marginwidth="0"></iframe>
+
+		</div>
+
+	</main>
+
+	<footer>
+		
+	</footer>
+
+</body>
+
 </html>
