--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 		<div>
 
-		  <video src="https://www.dropbox.com/scl/fi/xvv7qtlvfx64igoff0kr6/newsletter-1mp4.mp4?rlkey=wgarrs4haz8ojkor1zkx24suc&st=3ffqipr9&dl=0" autoplay loop playsinline muted>
+		  <video src="https://peprojects.dev/beta-two/bret/media/newsletter-1.mp4" autoplay loop playsinline muted>
 		  </video>
 
 		</div>
@@ -40,7 +40,7 @@
 	</main>
 
 	<footer>
-		
+
 	</footer>
 
 </body>
