--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 		<div>
 
-			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfkv1QXxCCr9ViabdGiGWzteSGu_KnKdE0C2e1VI3Q1ewjO8g/viewform?embedded=true" width="640" height="640" marginheight="0" marginwidth="0"></iframe>
+			<iframe style=".xpWfed {display: none;}" src="https://docs.google.com/forms/d/e/1FAIpQLSfkv1QXxCCr9ViabdGiGWzteSGu_KnKdE0C2e1VI3Q1ewjO8g/viewform?embedded=true" width="640" height="640" marginheight="0" marginwidth="0"></iframe>
 
 		</div>
 
