--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<link rel="stylesheet" href="css/style.css">
 
-	<link rel="icon" type="image/x-icon" href="media/favicon.png">
+	<link rel="icon" type="image/x-icon" href="/media/favicon.png">
 
 </head>
 
