correct-og-img-url-2

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 	<meta name="description" content="dj • house • techno">
 
-	<meta property="og:image" content="media/meta.png">
+	<meta property="og:image" content="/media/meta.png">
 
 	<link rel="stylesheet" href="css/style.css">
 
-	<link rel="icon" type="image/x-icon" href="/media/favicon.png">
+	<link rel="icon" type="image/x-icon" href="media/favicon.png">
 
 </head>
 
